--- a/index.html
+++ b/index.html
@@ -1,142 +1,89 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="shortcut icon" href="img/favicon.ico">
-
-    <!-- Bootstrap CSS -->
+    <meta name="description" content="">
+    <title>Confecciones Colombia</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
+    <script src="https://kit.fontawesome.com/30ef730d66.js" crossorigin="anonymous"></script>
     <!-- Custom styles for this template -->
-    <link href="css/freelancer.min.css" rel="stylesheet">
-    <title>Software Developer</title>
-
+    <link rel="stylesheet" href="~/css/site.css" />
   </head>
-  <body id="page-top">
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Rodrigo Jiménez</a>
-        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
-            </li>
-          </ul>
+  <body>
+	  
+    <header>
+        <div class="collapse bg-dark" id="navbarHeader">
+            <div class="container">
+            <div class="row">
+                <div class="col-sm-8 col-md-7 py-4">
+                <h4 class="text-white">Acerca de</h4>
+                <p class="text-muted">
+                    Somos una empresa que ofrece servicios de manufactura textil industrial en la región de Uruapan. 
+                </p>
+                </div>
+                <div class="col-sm-4 offset-md-1 py-4">
+                <h4 class="text-white">Contacto</h4>
+                <ul class="list-unstyled">
+                    <li><span class="text-muted"> <i class="fab fa-whatsapp"></i> 452 201 8336 </span> </li>
+                    <li><a href="https://www.facebook.com/Confecciones-Colombia-315223262181132/" class="text-white"><i class="fab fa-facebook-f"></i> Confecciones Colombia</a></li>
+                    <li><span class="text-muted"> contacto@confeccionescolombia.com</span> </li>
+                </ul>
+                </div>
+            </div>
+            </div>
         </div>
-      </div>
-    </nav>
-
-    <!-- Header -->
-    <header class="masthead bg-primary text-white text-center">
-      <div class="container">
-         <h1 class="text-uppercase mb-0">Software Developer</h1>
-        <hr class="star-light">
-        <h2 class="font-weight-light mb-0">
-	    Full stack developer with more than 10 years of experience.
-	    My background includes object oriented
-	    programming, functional programming, design patterns, unit testing,
-	    microservices, containers, virtualization, and networking.
-	</h2>
-      </div>
+        <div class="navbar navbar-light shadow-sm ccnaranja">
+            <div class="container d-flex justify-content-between">
+            <a href="#" class="navbar-brand d-flex align-items-center">
+                <i class="fas fa-store"></i>&nbsp;<strong>Store</strong>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            </div>
+        </div>
     </header>
 
-    <div class="container">
-      <table class="table">
-	<thead>
-	  <tr>
-	    <th scope="col">#</th>
-	    <th scope="col">Recent Training</th>
-	    <th scope="col">Name</th>
-	    <th scope="col">Certificate</th>
-	  </tr>
-	</thead>
-	<tbody>
-	  <tr>
-	    <th scope="row">1</th>
-	    <td>
-	      Plural Sight
-	    </td>
-	    <td>
-	      Several Courses
-	    </td>
-	    <td>
-	      <a href="https://github.com/rogithub/rogithub.github.io/tree/master/psight">Certs</a>
-	    </td>
-	  </tr>
-	</tbody>
-	</table>
-    </div>
+    <main role="main">
+	<section class="jumbotron text-center album">
+	    <div class="container">
+	      <h1 class="jumbotron-heading">Confecciones Colombia</h1>
+	      <p class="lead text-muted">
+		  Encuentra aquí bonitos productos listos para la venta
+		  en Uruapan y sus alrededores. Contáctanos por whats-app.
+		  452 201 8336
+		  <span style="color: Green;">
+		    <i class="fab fa-whatsapp"></i>
+		  </span>                   
+	      </p>
 
-    <!-- Footer -->
-    <footer class="footer text-center" id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">github</h4>
-	    <ul class="list-inline mb-0">
+	    </div>
+	</section>
+	<div class="album py-5">
+	    <div class="container">
+	    </div>
+	 </div>
 
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://github.com/rogithub/">
-                  <i class="fab fa-fw fa-github"></i>
-                </a>
-              </li>
+    </main>
 
-            </ul>
-
-          </div>
-          <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Résumé</h4>
-            <ul class="list-inline mb-0">
-
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="resume/RodrigoJimenezProfile.pdf">
-                  <i class="fas fa-fw fa-file-pdf"></i>
-                </a>
-              </li>
-
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">Contact</h4>
-            <p class="lead mb-0">
-              México
-              <br />
-              +52 452 132 9604
-              <br />
-              correo.rodrigo@gmail.com	      	      
+    <footer class="ccnaranja">
+        <div class="container">
+            <p class="float-right">
+                <a href="#">Ir arriba</a>
             </p>
-          </div>
+            <p>
+                452 201 8336
+                <i class="fab fa-whatsapp"></i> | 
+                
+                <a href="https://www.facebook.com/Confecciones-Colombia-315223262181132/">
+                    <i class="fab fa-facebook-f"></i> Confecciones Colombia
+                </a> |
+                contacto@confeccionescolombia.com
+            </p>       
         </div>
-      </div>
     </footer>
 
-    <div class="copyright py-4 text-center text-white">
-      <div class="container">
-        <small>Copyright &copy; https://rogithub.github.io/ 2019 - bitcoin:bc1qvz4tal5q00e3pq9dyh85eke66txcr2qapjafwa</small>
-      </div>
-    </div>
-
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <div class="scroll-to-top d-lg-none position-fixed ">
-      <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
-        <i class="fa fa-chevron-up"></i>
-      </a>
-    </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
