--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/30ef730d66.js" crossorigin="anonymous"></script>
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="css/site.css" />
+    <link rel="shortcut icon" href="img/favicon.ico">
   </head>
   <body>
 	  
