--- a/index.html
+++ b/index.html
@@ -47,165 +47,7 @@
     </header>
 
     <main role="main">
-	<section class="jumbotron text-center album">
-	    <div class="container">
-	      <h1 class="jumbotron-heading">Confecciones Colombia</h1>
-	      <p class="lead text-muted">
-		  Encuentra aquí bonitos productos listos para la venta
-		  en Uruapan y sus alrededores. Contáctanos por whats-app.
-		  452 201 8336
-		  <span style="color: Green;">
-		    <i class="fab fa-whatsapp"></i>
-		  </span>                   
-	      </p>
-
-	    </div>
-	</section>
-	
-	 <div class="album py-5">
-	    <div class="container">
-
-	      <div class="row">
-		<div class="col-md-4">
-		  <div class="card mb-4 shadow-sm">
-		    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-		    <div class="card-body">
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		      <div class="d-flex justify-content-between align-items-center">
-			<div class="btn-group">
-			  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-			  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-			</div>
-			<small class="text-muted">9 mins</small>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-		<div class="col-md-4">
-		  <div class="card mb-4 shadow-sm">
-		    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-		    <div class="card-body">
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		      <div class="d-flex justify-content-between align-items-center">
-			<div class="btn-group">
-			  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-			  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-			</div>
-			<small class="text-muted">9 mins</small>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-		<div class="col-md-4">
-		  <div class="card mb-4 shadow-sm">
-		    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-		    <div class="card-body">
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		      <div class="d-flex justify-content-between align-items-center">
-			<div class="btn-group">
-			  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-			  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-			</div>
-			<small class="text-muted">9 mins</small>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-
-		<div class="col-md-4">
-		  <div class="card mb-4 shadow-sm">
-		    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-		    <div class="card-body">
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		      <div class="d-flex justify-content-between align-items-center">
-			<div class="btn-group">
-			  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-			  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-			</div>
-			<small class="text-muted">9 mins</small>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-		<div class="col-md-4">
-		  <div class="card mb-4 shadow-sm">
-		    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-		    <div class="card-body">
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		      <div class="d-flex justify-content-between align-items-center">
-			<div class="btn-group">
-			  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-			  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-			</div>
-			<small class="text-muted">9 mins</small>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-		<div class="col-md-4">
-		  <div class="card mb-4 shadow-sm">
-		    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-		    <div class="card-body">
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		      <div class="d-flex justify-content-between align-items-center">
-			<div class="btn-group">
-			  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-			  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-			</div>
-			<small class="text-muted">9 mins</small>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-
-		<div class="col-md-4">
-		  <div class="card mb-4 shadow-sm">
-		    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-		    <div class="card-body">
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		      <div class="d-flex justify-content-between align-items-center">
-			<div class="btn-group">
-			  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-			  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-			</div>
-			<small class="text-muted">9 mins</small>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-		<div class="col-md-4">
-		  <div class="card mb-4 shadow-sm">
-		    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-		    <div class="card-body">
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		      <div class="d-flex justify-content-between align-items-center">
-			<div class="btn-group">
-			  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-			  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-			</div>
-			<small class="text-muted">9 mins</small>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-		<div class="col-md-4">
-		  <div class="card mb-4 shadow-sm">
-		    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-		    <div class="card-body">
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		      <div class="d-flex justify-content-between align-items-center">
-			<div class="btn-group">
-			  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-			  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-			</div>
-			<small class="text-muted">9 mins</small>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-	      </div>
-	    </div>
-	</div>
+      <!-- ko template: { name: 'Categorias' } --><!-- /ko -->
     </main>
 
     <footer class="ccnaranja">
@@ -225,8 +67,59 @@
         </div>
     </footer>
 
+    <script type="text/html" id="Categorias">
+      	<section class="jumbotron text-center album">
+	    <div class="container">
+	      <h1 class="jumbotron-heading">Confecciones Colombia</h1>
+	      <p class="lead text-muted">
+		  Encuentra aquí bonitos productos listos para la venta
+		  en Uruapan y sus alrededores. Contáctanos por whats-app.
+		  452 201 8336
+		  <span style="color: Green;">
+		    <i class="fab fa-whatsapp"></i>
+		  </span>                   
+	      </p>
+	    </div>
+	</section>
+	
+	<div class="album py-5">
+	    <div class="container">
+
+	      <div class="row">
+		<div class="col">
+		  <div class="card-deck">
+		    <!-- ko foreach: items() -->
+		    <!-- ko template: { name: 'CategoriaIt' } --><!-- /ko -->
+		    <!-- /ko -->
+		  </div>
+		</div>
+	      </div>
+	    </div>
+	</div>
+	    
+    </script>
+
+    <script type="text/html" id="CategoriaIt">
+      <div class="card">
+	<img data-bind="attr: { src: imgpath }" class="card-img-top">
+	<div class="card-body">
+	  <h5 class="card-title" data-bind="text: title"></h5>
+
+	  <p data-bind="text: desc"></p>
+	  
+	  <div class="float-right">
+	    <a href="#"> ver mas </a>
+	  </div>
+
+	</div>
+      </div>
+    </script>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js" crossorigin="anonymous"></script>
+    <script src="js/categorias.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
