--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	  <p data-bind="text: desc"></p>
 	  
 	  <div class="float-right">
-	    <a href="#"> ver mas </a>
+	    <a data-bind="attr: { href: 'productos.html?code=' + code }"> <i class="far fa-eye"></i> ver mas </a>
 	  </div>
 
 	</div>
