--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <footer class="ccnaranja">
         <div class="container">
             <p class="float-right">
-                <a href="#">Ir arriba</a>
+                <a href="#"><i class="fas fa-arrow-circle-up"></i> Ir arriba</a>
             </p>
             <p>
                 452 201 8336
