--- a/index.html
+++ b/index.html
@@ -1,53 +1,60 @@
 <!doctype html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <title>Confecciones Colombia</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/30ef730d66.js" crossorigin="anonymous"></script>
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="css/site.css" />
     <link rel="shortcut icon" href="img/favicon.ico">
-  </head>
-  <body>
-	  
+</head>
+
+<body>
+
     <header>
         <div class="collapse bg-dark" id="navbarHeader">
             <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-7 py-4">
-                <h4 class="text-white">Acerca de</h4>
-                <p class="text-muted">
-                    Somos una empresa que ofrece servicios de manufactura textil industrial en la región de Uruapan. 
-                </p>
+                <div class="row">
+                    <div class="col-sm-8 col-md-7 py-4">
+                        <h4 class="text-white">Acerca de</h4>
+                        <p class="text-muted">
+                            Somos una empresa que ofrece servicios de manufactura textil industrial en la región de
+                            Uruapan.
+                        </p>
+                    </div>
+                    <div class="col-sm-4 offset-md-1 py-4">
+                        <h4 class="text-white">Contacto</h4>
+                        <ul class="list-unstyled">
+                            <li><span class="text-muted"> <i class="fab fa-whatsapp"></i> 452 201 8336 </span> </li>
+                            <li><a href="https://www.facebook.com/Confecciones-Colombia-315223262181132/"
+                                    class="text-white"><i class="fab fa-facebook-f"></i> Confecciones Colombia</a></li>
+                            <li><span class="text-muted"> contacto@confeccionescolombia.com</span> </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-sm-4 offset-md-1 py-4">
-                <h4 class="text-white">Contacto</h4>
-                <ul class="list-unstyled">
-                    <li><span class="text-muted"> <i class="fab fa-whatsapp"></i> 452 201 8336 </span> </li>
-                    <li><a href="https://www.facebook.com/Confecciones-Colombia-315223262181132/" class="text-white"><i class="fab fa-facebook-f"></i> Confecciones Colombia</a></li>
-                    <li><span class="text-muted"> contacto@confeccionescolombia.com</span> </li>
-                </ul>
-                </div>
-            </div>
             </div>
         </div>
         <div class="navbar navbar-light shadow-sm ccnaranja">
             <div class="container d-flex justify-content-between">
-            <a href="#" class="navbar-brand d-flex align-items-center">
-                <i class="fas fa-store"></i>&nbsp;<strong>Store</strong>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <a href="#" class="navbar-brand d-flex align-items-center">
+                    <i class="fas fa-store"></i>&nbsp;<strong>Store</strong>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
+                    aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
             </div>
         </div>
     </header>
 
     <main role="main">
-      <!-- ko template: { name: 'Categorias' } --><!-- /ko -->
+        <!-- ko template: { name: 'Categorias' } -->
+        <!-- /ko -->
     </main>
 
     <footer class="ccnaranja">
@@ -57,13 +64,13 @@
             </p>
             <p>
                 452 201 8336
-                <i class="fab fa-whatsapp"></i> | 
-                
+                <i class="fab fa-whatsapp"></i> |
+
                 <a href="https://www.facebook.com/Confecciones-Colombia-315223262181132/">
                     <i class="fab fa-facebook-f"></i> Confecciones Colombia
                 </a> |
                 contacto@confeccionescolombia.com
-            </p>       
+            </p>
         </div>
     </footer>
 
@@ -118,12 +125,20 @@
       </div>
     </script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js"
+        crossorigin="anonymous"></script>
     <script src="js/services.js"></script>
     <script src="js/categorias.js"></script>
     <script src="js/index.js"></script>
-  </body>
+</body>
+
 </html>
