--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 <h1>Administración</h1>
                 
                 <!-- ko foreach: list() -->
-                <div class="row">
-                    <div class="col" data-bind="css: { 'bg-light' : $index() % 2 === 0, 'bg-secondary'  : $index() % 2 !== 0 }">	
+                <div class="row" data-bind="css: { 'bg-light' : $index() % 2 === 0, 'bg-secondary'  : $index() % 2 !== 0 }">
+                    <div class="col">	
                         <h2 data-bind="text: 'Producto: ' + ($index() + 1)"> </h2>	  
                         <form>
                             <div class="form-group">
@@ -104,8 +104,24 @@
                             
                         </form>		  
                     </div>
-                    <div class="col">
-                        Fotos La primera es la de la portada.
+                    <div class="col">                        
+                        <!-- ko foreach: sfotos() -->
+                        <div class="row">
+                            <div class="col">		  
+                                <div class="card-columns">
+                                <!-- ko foreach: $data -->
+                                    <div class="card">
+                                        <img data-bind="attr: { src: $data }" class="card-img-top" alt="foto">    
+                                        <div class="card-footer">
+                                            <small class="text-muted">quitar</small>
+                                            <small class="text-muted">reemplazar</small>
+                                        </div>                                  
+                                    </div>		    
+                                <!-- /ko -->
+                                </div>		  
+                            </div>	      
+                        </div>	      
+                        <!-- /ko -->                         
                     </div>
                 </div>	      
                 <!-- /ko -->                
