--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             Salir <i class="fas fa-door-open"></i>
                         </a> 
                     
-                        <a data-bind="attr: { href: jsonFile, download: 'alv.json' }" class="btn btn-info btn-lg mx-4">
+                        <a data-bind="attr: { href: jsonFile, download: fileName }" class="btn btn-info btn-lg mx-4">
                             Guardar Cambios <i class="fas fa-cloud-download-alt"></i>
                         </a>
                     
