--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
                     </div>	      
                     <div class="col">                            
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="customFileLang" 
+                            <input type="file" class="custom-file-input" id="customFileLang" multiple="multiple"
                             data-bind="event: { change: product.addFoto.bind(product) }"
                             lang="es">
-                            <label class="custom-file-label" for="customFileLang">Agregar foto (Primera foto será la portada)</label>
+                            <label class="custom-file-label" for="customFileLang">Agregar fotos (Primera foto será la portada)</label>
                         </div>
                     </div>   
                 </div>
