--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <form>
             <div class="form-group">
                 <label for="title">Título</label>
-                <input type="text" data-bind="value: titulo" class="form-control" id="title" aria-describedby="title" placeholder="Título" />
+                <input type="text" data-bind="hasFocus: hasFocus, value: titulo" class="form-control" id="title" aria-describedby="title" placeholder="Título" />
             </div>
             <div class="form-group">
                 <label for="desc">Descripción</label>
@@ -174,7 +174,7 @@
                         </a>
                     </div>
                     <div class="col text-right">
-                        <button data-bind="hasFocus: hasFocus, click: $parent.delProd.bind($parent)" type="button" class="btn btn-danger">Borrar Anuncio <i class="far fa-trash-alt"></i></button>
+                        <button data-bind="click: $parent.delProd.bind($parent)" type="button" class="btn btn-danger">Borrar Anuncio <i class="far fa-trash-alt"></i></button>
                     </div>
                 </div>  
                 <div class="row" data-bind="css: { 'bg-light' : $index() % 2 === 0 }">
@@ -189,7 +189,7 @@
                             <input type="file" class="custom-file-input" id="customFileLang" multiple="multiple"
                             data-bind="event: { change: product.addFoto.bind(product) }"
                             lang="es">
-                            <label class="custom-file-label" for="customFileLang" data-bind="text: 'Subir fotos ' + product.titulo() + ' (Puedes seleccionar varias a la vez)' "></label>
+                            <label data-bind="text: 'Subir fotos ' + product.titulo() + ' (Puedes seleccionar varias a la vez)' " class="custom-file-label" for="customFileLang"></label>
                         </div>
                     </div>   
                 </div>
