--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                         </a> 
                     
                         <a data-bind="attr: { href: jsonFile, download: fileName }" class="btn btn-info btn-lg mx-4">
-                            Guardar Cambios <i class="fas fa-cloud-download-alt"></i>
+                            Guardar <i class="fas fa-cloud-download-alt"></i>
                         </a>
                     
                         <button type="button" data-bind="click: newProd" class="btn btn-success btn-lg">
-                            Nuevo Anuncio <i class="fas fa-plus"></i>
+                            Nuevo <i class="fas fa-plus"></i>
                         </button>
                     </div>
                 </div>
