--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             <input type="file" class="custom-file-input" id="customFileLang" multiple="multiple"
                             data-bind="event: { change: product.addFoto.bind(product) }"
                             lang="es">
-                            <label data-bind="text: 'Subir fotos ' + product.titulo() + ' (Puedes seleccionar varias a la vez)' " class="custom-file-label" for="customFileLang"></label>
+                            <label data-bind="text: 'Fotos ' + product.titulo()" class="custom-file-label" for="customFileLang"></label>
                         </div>
                     </div>   
                 </div>
