--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
                 <h1>Administración</h1>
                 <div class="row text-center fixed-top">
                     <div class="col">
-                        <a href="index.html" class="btn btn-secondary btn-lg">
+                        <a href="index.html" class="btn btn-secondary btn">
                             Salir <i class="fas fa-door-open"></i>
                         </a> 
                     
-                        <a data-bind="attr: { href: jsonFile, download: fileName }" class="btn btn-info btn-lg mx-4">
+                        <a data-bind="attr: { href: jsonFile, download: fileName }" class="btn btn-info btn mx-4">
                             Guardar <i class="fas fa-cloud-download-alt"></i>
                         </a>
                     
-                        <button type="button" data-bind="click: newProd" class="btn btn-success btn-lg">
+                        <button type="button" data-bind="click: newProd" class="btn btn-success btn">
                             Nuevo <i class="fas fa-plus"></i>
                         </button>
                     </div>
