--- a/index.html
+++ b/index.html
@@ -266,6 +266,18 @@
                 </p>
             </div>
         </section>
+
+        <section class="jumbotron text-center album">
+            <div class="container">
+                <h1 class="jumbotron-heading">Elaboración de cubrebocas</h1>
+                <p class="lead text-muted alert-primary">
+                    Dado el desabasto de cubrebocas y otros materiales sanitarios
+                    debido a la pandemia de coronavirus <strong>COVID-19</strong>,
+                    ponemos a su dispocición la elaboración de <strong>cubrebocas</strong>
+                    y otros materiales para el cuidado y prevención de la enfermedad.                       
+                </p>
+            </div>
+        </section>
         
         <div class="album py-5">
             <div class="container">
