--- a/index.html
+++ b/index.html
@@ -258,19 +258,15 @@
                 <h1 class="jumbotron-heading">Confecciones Colombia</h1>
                 <p class="lead text-muted">
                     Encuentra aquí bonitos productos listos para la venta
-                    en Uruapan y sus alrededores. Contáctanos por whats-app.
+                    en <strong>Uruapan</strong> Michoacán y sus alrededores. Contáctanos por whats-app.
                     452 201 8336
                 <span style="color: Green;">
                     <i class="fab fa-whatsapp"></i>
                 </span>                   
                 </p>
-            </div>
-        </section>
 
-        <section class="jumbotron text-center album">
-            <div class="container">
-                <h1 class="jumbotron-heading">Elaboración de cubrebocas</h1>
-                <p class="lead text-muted alert-primary">
+                <h2 class="jumbotron-heading">Cubrebocas</h2>
+                <p class="alert-primary">
                     Dado el desabasto de cubrebocas y otros materiales sanitarios
                     debido a la pandemia de coronavirus <strong>COVID-19</strong>,
                     ponemos a su dispocición la elaboración de <strong>cubrebocas</strong>
