--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
             <div class="container">
                 <h1 class="jumbotron-heading">Confecciones Colombia</h1>
                 <p class="lead text-muted">
-                    Encuentra aquí bonitos productos listos para la venta
-                    en <strong>Uruapan</strong> Michoacán y sus alrededores. Contáctanos por whats-app.
+                    En Uruapan Michoacán, y sus alrededores.
+                    <br /> Contáctanos por whats-app.
                     452 201 8336
                 <span style="color: Green;">
                     <i class="fab fa-whatsapp"></i>
