--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </p>
 
                 <h2 class="jumbotron-heading">Cubrebocas</h2>
-                <p class="alert-primary">
+                <p class="alert alert-primary" role="alert">
                     Dado el desabasto de cubrebocas y otros materiales sanitarios
                     debido a la pandemia de coronavirus <strong>COVID-19</strong>,
                     ponemos a su dispocición la elaboración de <strong>cubrebocas</strong>
