--- a/index.html
+++ b/index.html
@@ -265,13 +265,15 @@
                 </span>                   
                 </p>
 
-                <h2 class="jumbotron-heading">Cubrebocas</h2>
-                <p class="alert alert-primary" role="alert">
-                    Dado el desabasto de cubrebocas y otros materiales sanitarios
-                    debido a la pandemia de coronavirus <strong>COVID-19</strong>,
-                    ponemos a su dispocición la elaboración de <strong>cubrebocas</strong>
-                    y otros materiales para el cuidado y prevención de la enfermedad.                       
-                </p>
+                <div class="alert alert-primary" role="alert">
+                    <h2 class="jumbotron-heading">Cubrebocas</h2>
+                    <p>
+                        Dado el desabasto de cubrebocas y otros materiales sanitarios
+                        debido a la pandemia de coronavirus <strong>COVID-19</strong>,
+                        ponemos a su dispocición la elaboración de <strong>cubrebocas</strong>
+                        y otros materiales para el cuidado y prevención de la enfermedad.                       
+                    </p>
+                </div>
             </div>
         </section>
         
