--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <p>
                         Dado el desabasto de cubrebocas y otros materiales sanitarios
                         debido a la pandemia de coronavirus <strong>COVID-19</strong>,
-                        ponemos a su dispocición la elaboración de <strong>cubrebocas</strong>
+                        ponemos a su dispocición la elaboración de cubrebocas
                         y otros materiales para el cuidado y prevención de la enfermedad.                       
                     </p>
                 </div>
