--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
                 </p>
 
                 <div class="alert alert-primary" role="alert">
-                    <h2 class="jumbotron-heading">Cubrebocas</h2>
+                    <h2 class="alert-heading">Cubrebocas</h2>
+                    <hr>
                     <p>
-                        Dado el desabasto de cubrebocas y otros materiales sanitarios
-                        debido a la pandemia de coronavirus <strong>COVID-19</strong>,
+                        Debido a la pandemia de coronavirus <strong>COVID-19</strong>,
                         ponemos a su dispocición la elaboración de cubrebocas
                         y otros materiales para el cuidado y prevención de la enfermedad.                       
                     </p>
