--- a/index.html
+++ b/index.html
@@ -262,15 +262,14 @@
                     452 201 8336
                 <span style="color: Green;">
                     <i class="fab fa-whatsapp"></i>
-                </span>                   
-                </p>
-
+                </span>
+                </p>                                
                 <div class="alert alert-primary" role="alert">
-                    <h2 class="alert-heading">Cubrebocas</h2>
+                    <h2 class="alert-heading">Cubrebocas 😷</h2>
                     <hr>
                     <p>
                         Debido a la pandemia de coronavirus <strong>COVID-19</strong>,
-                        ponemos a su dispocición la elaboración de cubrebocas
+                        ponemos a su dispocición la elaboración de cubrebocas                        
                         y otros materiales para el cuidado y prevención de la enfermedad.                       
                     </p>
                 </div>
