--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
             <div class="container">
                 <h1 class="jumbotron-heading">Confecciones Colombia</h1>
                 <p class="lead text-muted">
-                    En Uruapan Michoacán, y sus alrededores.
+                    En Uruapan 🥑 Michoacán, y sus alrededores.
                     <br /> Contáctanos por whats-app.
-                    452 201 8336
+                    <strong>452 201 8336</strong>                    
                 <span style="color: Green;">
                     <i class="fab fa-whatsapp"></i>
                 </span>
