--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <h2 class="alert-heading">Cubrebocas 😷</h2>
                     <hr>
                     <p>
-                        Debido a la pandemia de coronavirus <strong>COVID-19</strong>,
+                        Debido a la pandemia de coronavirus <strong>COVID-19 🦠</strong>,
                         ponemos a su dispocición la elaboración de cubrebocas                        
                         y otros materiales para el cuidado y prevención de la enfermedad.                       
                     </p>
