--- a/index.html
+++ b/index.html
@@ -258,11 +258,10 @@
                 <h1 class="jumbotron-heading">Confecciones Colombia</h1>
                 <p class="lead text-muted">
                     En Uruapan 🥑 Michoacán, y sus alrededores.
-                    <br /> Contáctanos por whats-app.
-                    <strong>452 201 8336</strong>                    
-                <span style="color: Green;">
-                    <i class="fab fa-whatsapp"></i>
-                </span>
+                    <br /> WhatsApp. <strong>452 201 8336</strong>                    
+                    <span style="color: Green;">
+                        <i class="fab fa-whatsapp"></i>
+                    </span>
                 </p>                                
                 <div class="alert alert-primary" role="alert">
                     <h2 class="alert-heading">Cubrebocas 😷</h2>
