--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </p>
 
                 <p class="lead text-muted">
-                Compra por whats-app.
+                Compra por WhatsApp.
                 452 201 8336
                 <span style="color: Green;">
                 <i class="fab fa-whatsapp"></i>
