working from home

--- a/index.html
+++ b/index.html
@@ -264,12 +264,19 @@
                     </span>
                 </p>                                
                 <div class="alert alert-primary" role="alert">
-                    <h2 class="alert-heading">Cubrebocas 😷</h2>
+                    <h2 class="alert-heading">COVID-19 😷</h2>
                     <hr>
                     <p>
-                        Debido a la pandemia de coronavirus <strong>COVID-19</strong>,
-                        ponemos a su dispocición la elaboración de cubrebocas                        
-                        y otros materiales para el cuidado y prevención de la enfermedad.                       
+                        Debido a la pandemia de coronavirus COVID-19,
+                        ponemos a su dispocición la elaboración de materiales,
+                        adecuación de instalaciones o moviliario, mediante la confección
+                        industrial, para el cuidado y prevención de la enfermedad. 
+                    </p>
+                    <p>
+                        Trabajamos para instituciones que necesitan seguir operando a pesar
+                        de la contingencia, como hospitales y otros servicios, brindando 
+                        confección con sus propios materiales de acuerdo a sus propias 
+                        especificaciones.
                     </p>
                 </div>
             </div>
