working from home

--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
                         confección con sus propios materiales de acuerdo a sus propias 
                         especificaciones.
                     </p>
+
+                    <hr>
+                    <h2>Conteo en tiempo real</h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qgylp3Td1Bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; pi\cture-in-picture" allowfullscreen></iframe>
+    
                 </div>
             </div>
         </section>
