--- a/index.html
+++ b/index.html
@@ -281,8 +281,9 @@
 
                     <hr>
                     <h2>Conteo en tiempo real</h2>
-                    <iframe src="https://www.youtube.com/embed/qgylp3Td1Bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; pi\cture-in-picture" allowfullscreen></iframe>
-    
+                    <div class="media img-fluid">
+                        <iframe src="https://www.youtube.com/embed/qgylp3Td1Bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; pi\cture-in-picture" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </section>
