--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <p>
                         Debido a la pandemia de coronavirus COVID-19,
                         ponemos a su dispocición la elaboración de materiales,
-                        adecuación de instalaciones o moviliario, mediante la confección
+                        adecuación de instalaciones o mobiliario, mediante la confección
                         industrial, para el cuidado y prevención de la enfermedad. 
                     </p>
                     <p>
