--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//alaventa.sytes.net/matomo/";
+    var u="//estadisticas.dejatupuntito.com/";
     _paq.push(['setTrackerUrl', u+'matomo.php']);
     _paq.push(['setSiteId', '3']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
