--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PHBLL6YP7Q"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-PHBLL6YP7Q');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confecciones Colombia</title>
@@ -138,7 +148,7 @@
     </div>
 
     <h2>
-        Cojineria
+        Cojinería
     </h2>
     <div class="row">
         <div class="col-sm-4">
@@ -168,7 +178,7 @@
     </div>
 
     <h2>
-        Residencial y Hotelería
+        Residencial y hotelería
     </h2>
     <div class="row">
         <div class="col-sm-4">
