--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="decoración tapicería cojinería hotelería bares restaurantes colchonetas cubiertas fundas">
+        content="decoración tapicería cojinería hotelería bares restaurantes colchonetas cubiertas buceo fundas">
 
     <title>Confecciones Colombia</title>
     <link rel="icon" href="/favicon.ico">
@@ -92,6 +92,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#colchonetas">Colchonetas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#sports">Buceo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#fundas">Fundas</a>
@@ -337,6 +340,38 @@
                         <img src="fotos/otros/toldo.jpeg" class="card-img-top" alt="toldos">
                         <div class="card-body">
                             <h5 class="card-title">Toldos en lonas y telas sintéticas</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
+
+        <article id="sports">
+            <h2>
+                Deportes acuáticos
+            </h2>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img src="fotos/diving/tanques.jpeg" class="card-img-top" alt="tanques">
+                        <div class="card-body">
+                            <h5 class="card-title">Reparación de equipo de buceo</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img src="fotos/diving/longboard.jpeg" class="card-img-top" alt="longboard">
+                        <div class="card-body">
+                            <h5 class="card-title">Fundas para tablas y deportes acuáticos</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img src="fotos/diving/cierre.jpeg" class="card-img-top" alt="cierre">
+                        <div class="card-body">
+                            <h5 class="card-title">Reparación mantenimiento y diseño a la medida</h5>
                         </div>
                     </div>
                 </div>
