--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="description"
         content="decoración tapicería cojinería hotelería bares restaurantes colchonetas cubiertas buceo fundas">
 
-    <title>Confecciones Colombia</title>
+    <title>Confecciones Colombia - Playa del Carmen</title>
     <link rel="icon" href="/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -265,7 +265,7 @@
                     <div class="card">
                         <img src="fotos/residencial/sabana.jpeg" class="card-img-top" alt="sabana">
                         <div class="card-body">
-                            <h5 class="card-title">Sábanas, toallas, batas de baño, blancos.</h5>
+                            <h5 class="card-title">Sábanas, toallas, batas de baño, blancos</h5>
                         </div>
                     </div>
                 </div>
